--- a/init.org
+++ b/init.org
@@ -160,7 +160,11 @@ This is disabled in modes where line length doesn't matter.
 #+begin_src emacs-lisp
 ;; 80 character line limit indicator
 (setq-default fill-column 80)
+(setq-default display-fill-column-indicator-character ?│) ; Use solid line character
 (global-display-fill-column-indicator-mode 1)
+
+;; Customize the color of the fill column indicator
+(set-face-attribute 'fill-column-indicator nil :foreground "#555555")
 
 ;; Disable in certain modes
 (dolist (mode '(org-mode-hook
@@ -478,6 +482,10 @@ works globally in all modes.
     "oa" 'org-agenda
     "oc" 'org-capture
     "ol" 'org-store-link
+
+    ;; Compile
+    "c" '(:ignore t :which-key "compile")
+    "cc" 'c/compile-current-file
 
     ;; Toggle
     "t" '(:ignore t :which-key "toggle")
@@ -848,72 +856,74 @@ Configure it to work well with LSP and add a graphical popup for completions.
 ** LSP Mode
 Language Server Protocol support provides IDE-like features (autocomplete, go-to-definition,
 refactoring) for many programming languages. This configuration includes support for
-Python (pyright + ruff), LaTeX, TypeScript, JavaScript, Rust, C/C++, and more.
+Python (pyright + ruff), LaTeX, TypeScript, JavaScript, Rust, C/C++, Typst, and more.
 
 #+begin_src emacs-lisp
-;; LSP Mode - Language Server Protocol support
-(use-package lsp-mode
-  :ensure t
-  :commands (lsp lsp-deferred)
-  :hook ((python-mode . lsp-deferred)
-         (python-ts-mode . lsp-deferred)
-         (latex-mode . lsp-deferred)
-         (tex-mode . lsp-deferred)
-         (typescript-mode . lsp-deferred)
-         (javascript-mode . lsp-deferred)
-         (web-mode . lsp-deferred)
-         (rust-mode . lsp-deferred)
-         (c-mode . lsp-deferred)
-         (c++-mode . lsp-deferred))
-  :init
-  (setq lsp-keymap-prefix "C-c l")
-  :config
-  (when (fboundp 'lsp-enable-which-key-integration)
-    (lsp-enable-which-key-integration t))
-  (setq lsp-idle-delay 0.6)
-  (setq lsp-log-io nil)
-  (setq lsp-completion-enable t)
-  (setq lsp-signature-auto-activate t)
-  (setq lsp-signature-render-documentation t)
-  (setq lsp-eldoc-enable-hover t)
-  (setq lsp-eldoc-render-all nil)
-  (setq lsp-headerline-breadcrumb-enable t)
-  (setq lsp-semantic-tokens-enable t)
-  (setq lsp-enable-folding t)
-  (setq lsp-enable-imenu t)
-  (setq lsp-enable-snippet t)
-  (setq read-process-output-max (* 1024 1024))) ;; 1MB
+  ;; LSP Mode - Language Server Protocol support
+  (use-package lsp-mode
+    :ensure t
+    :commands (lsp lsp-deferred)
+    :hook ((python-mode . lsp-deferred)
+           (python-ts-mode . lsp-deferred)
+           (latex-mode . lsp-deferred)
+           (tex-mode . lsp-deferred)
+           (typescript-mode . lsp-deferred)
+           (javascript-mode . lsp-deferred)
+           (web-mode . lsp-deferred)
+           (rust-mode . lsp-deferred)
+           (c-mode . lsp-deferred)
+           (c++-mode . lsp-deferred)
+           (c-ts-mode . lsp-deferred)
+           (c++-ts-mode . lsp-deferred)
+           (typst-ts-mode . lsp-deferred))
+    :init
+    (setq lsp-keymap-prefix "C-c l")
+    :config
+    (when (fboundp 'lsp-enable-which-key-integration)
+      (lsp-enable-which-key-integration t))
+    (setq lsp-idle-delay 0.6)
+    (setq lsp-log-io nil)  ; Disable I/O logging for performance
+    (setq lsp-completion-enable t)
+    (setq lsp-signature-auto-activate t)
+    (setq lsp-signature-render-documentation t)
+    (setq lsp-eldoc-enable-hover t)
+    (setq lsp-eldoc-render-all nil)
+    (setq lsp-headerline-breadcrumb-enable t)
+    (setq lsp-semantic-tokens-enable t)
+    (setq lsp-enable-folding t)
+    (setq lsp-enable-imenu t)
+    (setq lsp-enable-snippet t)
+    (setq read-process-output-max (* 1024 1024))) ;; 1MB
 
-;; LSP UI - UI enhancements for LSP
-(use-package lsp-ui
-  :ensure t
-  :hook (lsp-mode . lsp-ui-mode)
-  :custom
-  (lsp-ui-doc-position 'bottom)
-  (lsp-ui-doc-show-with-cursor t)
-  (lsp-ui-doc-delay 0.5)
-  (lsp-ui-sideline-enable t)
-  (lsp-ui-sideline-show-hover t)
-  (lsp-ui-sideline-show-diagnostics t)
-  (lsp-ui-sideline-show-code-actions t)
-  (lsp-ui-peek-enable t)
-  :bind (:map lsp-ui-mode-map
-         ("C-c l d" . lsp-ui-doc-toggle)
-         ("C-c l p" . lsp-ui-peek-find-references)
-         ("C-c l P" . lsp-ui-peek-find-definitions)
-         ("C-c l i" . lsp-ui-peek-find-implementation)))
+  ;; LSP UI - UI enhancements for LSP
+  (use-package lsp-ui
+    :ensure t
+    :hook (lsp-mode . lsp-ui-mode)
+    :custom
+    (lsp-ui-doc-enable nil)  ; Disable doc popups for performance (use K instead)
+    (lsp-ui-doc-show-with-cursor nil)
+    (lsp-ui-sideline-enable nil)  ; Disable sideline for performance
+    (lsp-ui-sideline-show-hover nil)
+    (lsp-ui-sideline-show-diagnostics nil)
+    (lsp-ui-sideline-show-code-actions nil)
+    (lsp-ui-peek-enable t)  ; Keep peek for go-to-definition
+    :bind (:map lsp-ui-mode-map
+           ("C-c l d" . lsp-ui-doc-toggle)
+           ("C-c l p" . lsp-ui-peek-find-references)
+           ("C-c l P" . lsp-ui-peek-find-definitions)
+           ("C-c l i" . lsp-ui-peek-find-implementation)))
 
-;; LSP Ivy integration
-(use-package lsp-ivy
-  :ensure t
-  :commands lsp-ivy-workspace-symbol)
+  ;; LSP Ivy integration
+  (use-package lsp-ivy
+    :ensure t
+    :commands lsp-ivy-workspace-symbol)
 
-;; LSP Treemacs integration
-(use-package lsp-treemacs
-  :ensure t
-  :commands lsp-treemacs-errors-list
-  :config
-  (lsp-treemacs-sync-mode 1))
+  ;; LSP Treemacs integration
+  (use-package lsp-treemacs
+    :ensure t
+    :commands lsp-treemacs-errors-list
+    :config
+    (lsp-treemacs-sync-mode 1))
 #+end_src
 
 ** Python LSP Configuration
@@ -968,6 +978,140 @@ AUCTeX provides enhanced LaTeX editing with LSP support.
     (setq TeX-parse-self t)
     (setq-default TeX-master nil)
     (setq TeX-PDF-mode t)))
+#+end_src
+
+** C/C++ Configuration
+Configure clangd as the LSP server for C and C++ development. Clangd provides IDE features
+like code completion, go-to-definition, diagnostics, and refactoring.
+
+This configuration supports both regular modes (c-mode, c++-mode) and tree-sitter modes
+(c-ts-mode, c++-ts-mode).
+
+#+begin_src emacs-lisp
+;; C/C++ compile function using compile_commands.json
+(defun c/compile-current-file ()
+  "Compile the current C/C++ file using the command from compile_commands.json."
+  (interactive)
+  (let* ((project-root (locate-dominating-file default-directory "compile_commands.json"))
+         (compile-commands-file (when project-root
+                                  (expand-file-name "compile_commands.json" project-root)))
+         (current-file (buffer-file-name)))
+    (if (and compile-commands-file (file-exists-p compile-commands-file))
+        (let* ((json-object-type 'hash-table)
+               (json-array-type 'list)
+               (json-key-type 'string)
+               (compile-db (json-read-file compile-commands-file))
+               (file-entry (seq-find (lambda (entry)
+                                      (string= (gethash "file" entry)
+                                              (file-name-nondirectory current-file)))
+                                    compile-db))
+               (compile-command (when file-entry
+                                 (gethash "command" file-entry))))
+          (if compile-command
+              (compile compile-command)
+            (message "No compile command found for %s in compile_commands.json"
+                    (file-name-nondirectory current-file))))
+      (message "compile_commands.json not found in project root"))))
+
+;; C/C++ LSP Configuration with clangd
+(with-eval-after-load 'lsp-mode
+  ;; Configure clangd arguments
+  (setq lsp-clients-clangd-args
+        '("--header-insertion=never"
+          "--completion-style=detailed"
+          "--clang-tidy"
+          "--background-index"
+          "-j=4"
+          "--pch-storage=memory"))
+
+  ;; Register language IDs for both regular and tree-sitter modes
+  (add-to-list 'lsp-language-id-configuration '(c-mode . "c"))
+  (add-to-list 'lsp-language-id-configuration '(c++-mode . "cpp"))
+  (add-to-list 'lsp-language-id-configuration '(c-ts-mode . "c"))
+  (add-to-list 'lsp-language-id-configuration '(c++-ts-mode . "cpp"))
+
+  ;; Ensure clangd is enabled
+  (unless (member 'clangd lsp-enabled-clients)
+    (add-to-list 'lsp-enabled-clients 'clangd)))
+#+end_src
+
+** Tree-sitter Auto
+Automatically install and manage tree-sitter grammars for various languages.
+This package will download and compile tree-sitter grammars as needed.
+
+NOTE: Emacs 30.1 expects tree-sitter ABI version 14. We pin Python, C, and C++
+grammars to v0.20.x for compatibility. Newer versions (v0.21+) use ABI 15 which
+causes version-mismatch errors.
+
+#+begin_src emacs-lisp
+;; Configure tree-sitter language sources before treesit-auto
+(with-eval-after-load 'treesit
+  ;; Set language sources with compatible versions
+  (setq treesit-language-source-alist
+        '((python . ("https://github.com/tree-sitter/tree-sitter-python" "v0.20.4" "src"))
+          (typescript . ("https://github.com/tree-sitter/tree-sitter-typescript" "master" "typescript/src"))
+          (tsx . ("https://github.com/tree-sitter/tree-sitter-typescript" "master" "tsx/src"))
+          (javascript . ("https://github.com/tree-sitter/tree-sitter-javascript" "master" "src"))
+          (json . ("https://github.com/tree-sitter/tree-sitter-json" "master" "src"))
+          (bash . ("https://github.com/tree-sitter/tree-sitter-bash" "master" "src"))
+          (css . ("https://github.com/tree-sitter/tree-sitter-css" "master" "src"))
+          (html . ("https://github.com/tree-sitter/tree-sitter-html" "master" "src"))
+          (yaml . ("https://github.com/tree-sitter/tree-sitter-yaml" "master" "src"))
+          (c . ("https://github.com/tree-sitter/tree-sitter-c" "v0.20.8" "src"))
+          (cpp . ("https://github.com/tree-sitter/tree-sitter-cpp" "v0.20.5" "src"))
+          (rust . ("https://github.com/tree-sitter/tree-sitter-rust" "master" "src")))))
+
+;; Tree-sitter auto installation
+(use-package treesit-auto
+  :ensure t
+  :custom
+  (treesit-auto-install 'prompt)
+  :config
+  (treesit-auto-add-to-auto-mode-alist 'all)
+  (global-treesit-auto-mode))
+#+end_src
+
+** Typst Configuration
+Typst is a modern markup-based typesetting system. This configuration adds support
+for Typst with LSP integration using the tinymist language server.
+
+You'll need to install the tinymist language server:
+#+begin_example
+cargo install --git https://github.com/Myriad-Dreamin/tinymist
+#+end_example
+
+Or via Homebrew:
+#+begin_example
+brew install tinymist
+#+end_example
+
+#+begin_src emacs-lisp
+;; Typst mode with tree-sitter support
+(use-package typst-ts-mode
+  :ensure t
+  :defer t
+  :custom
+  (typst-ts-mode-watch-options "--open"))
+
+;; Typst compile function
+(defun typst-compile ()
+  "Compile the current Typst file using the typst compiler."
+  (interactive)
+  (let ((filename (buffer-file-name)))
+    (if filename
+        (compile (format "typst compile %s" (shell-quote-argument filename)))
+      (message "Buffer is not visiting a file"))))
+
+;; Configure Typst LSP client
+(with-eval-after-load 'lsp-mode
+  (add-to-list 'lsp-language-id-configuration '(typst-ts-mode . "typst"))
+
+  (lsp-register-client
+   (make-lsp-client
+    :new-connection (lsp-stdio-connection "tinymist")
+    :major-modes '(typst-ts-mode)
+    :server-id 'tinymist
+    :priority 0)))
 #+end_src
 
 ** Projectile
